@@ -9,6 +9,6 @@ else
   echo '成功'
 fi
 
-if [[ 1 == $error ]]; then
+if [[ 1 -eq $error ]]; then
   exit $error
 fi
